unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/Fellowship_Location_PreferenceHA__c.field-meta.xml
<CustomField>
    <fullName>Fellowship_Location_PreferenceHA__c</fullName>
    <description>Identify preferences for how the fellowship may be completed</description>
    <inlineHelpText>Shows on engagement list, from host application</inlineHelpText>
    <label>Fellowship Location Preference</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Person (full time)</fullName>
            </value>
            <value>
                <fullName>In Person (hybrid)</fullName>
            </value>
            <value>
                <fullName>Remote with Site Visits</fullName>
            </value>
            <value>
                <fullName>Fully Remote</fullName>
            </value>
            <value>
                <fullName>Fellow's Preference</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>