unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/Fellowship_Metro_Area__c.field-meta.xml
<CustomField>
    <fullName>Fellowship_Metro_Area__c</fullName>
    <formula>Host_Application__r.Fellowship_Metro_Area__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fellowship Metro Area</label>
    <type>Text</type>
</CustomField>