unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/Fellowship_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Fellowship_Postal_Code__c</fullName>
    <inlineHelpText>Postal code of fellowship address</inlineHelpText>
    <label>Fellowship Postal Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>