unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/Fellowship_Program__c.field-meta.xml
<CustomField>
    <fullName>Fellowship_Program__c</fullName>
    <defaultValue>If( $RecordType.DeveloperName   =  "U.S. Program", "U.S. Fellowship",

If( $RecordType.DeveloperName   =  "India Program", "India Fellowship",

If( $RecordType.DeveloperName   =  "China Program", "China Fellowship",NULL
)
)
)</defaultValue>
    <label>Fellowship Program</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>U.S. Fellowship</fullName>
            </value>
            <value>
                <fullName>India Fellowship</fullName>
            </value>
            <value>
                <fullName>China Fellowship</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>