unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/Fellowship_State__c.field-meta.xml
<CustomField>
    <fullName>Fellowship_State__c</fullName>
    <formula>TEXT(Host_Application__r.Fellowship_State__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fellowship State</label>
    <type>Text</type>
</CustomField>