unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/Fellowship_StateHA__c.field-meta.xml
<CustomField>
    <fullName>Fellowship_StateHA__c</fullName>
    <description>Shows on engagement list. From host application.</description>
    <inlineHelpText>Shows on engagement list. From host application.</inlineHelpText>
    <label>Fellowship State</label>
    <length>100</length>
    <type>Text</type>
</CustomField>