unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/Final_Deliverables_Project_Area__c.field-meta.xml
<CustomField>
    <fullName>Final_Deliverables_Project_Area__c</fullName>
    <label>Final Deliverables Project Area</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Solar and/or Wind</fullName>
            </value>
            <value>
                <fullName>Energy Storage</fullName>
            </value>
            <value>
                <fullName>Microgrids</fullName>
            </value>
            <value>
                <fullName>Demand Response/Load Shifting</fullName>
            </value>
            <value>
                <fullName>Zero Emission Vehicles &amp; Freight Sustainability</fullName>
            </value>
            <value>
                <fullName>Electrification</fullName>
            </value>
            <value>
                <fullName>Green Revolving Funds and/or creative financing solutions</fullName>
            </value>
            <value>
                <fullName>Supply Chain</fullName>
            </value>
            <value>
                <fullName>Scope 3</fullName>
            </value>
            <value>
                <fullName>Energy Data Analysis</fullName>
            </value>
            <value>
                <fullName>Energy Benchmarking</fullName>
            </value>
            <value>
                <fullName>Commercial Energy Efficiency</fullName>
            </value>
            <value>
                <fullName>Industrial Energy Efficiency</fullName>
            </value>
            <value>
                <fullName>Stakeholder Engagement</fullName>
            </value>
            <value>
                <fullName>GHG/Sustainability Strategy</fullName>
            </value>
            <value>
                <fullName>Target Setting &amp; Climate Commitments</fullName>
            </value>
            <value>
                <fullName>Climate Resiliency</fullName>
            </value>
            <value>
                <fullName>Energy Equity/Environmental Justice</fullName>
            </value>
            <value>
                <fullName>Food Waste</fullName>
            </value>
            <value>
                <fullName>Climate Smart Agriculture &amp; Food Systems</fullName>
            </value>
            <value>
                <fullName>Waste Management</fullName>
            </value>
            <value>
                <fullName>Sustainable Construction</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Specify your own area</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>