unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/Form_Assembly_ID__c.field-meta.xml
<CustomField>
    <fullName>Form_Assembly_ID__c</fullName>
    <description>FormAssembly form name and response number</description>
    <inlineHelpText>FormAssembly form name and response number</inlineHelpText>
    <label>Form Assembly ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>