unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/Funding_Source__c.field-meta.xml
<CustomField>
    <fullName>Funding_Source__c</fullName>
    <description>Enter funding source if the engagement is not self-funded.</description>
    <inlineHelpText>If supported by corporate foundation, please enter the account for that organization in 'Corporate Foundation Funding'</inlineHelpText>
    <label>Funding Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Host Paid</fullName>
                <label>Host</label>
            </value>
            <value>
                <fullName>Climate Corps</fullName>
            </value>
            <value>
                <fullName>Other EDF Program</fullName>
            </value>
            <value>
                <fullName>Shared - Climate Corps and other EDF program</fullName>
            </value>
            <value>
                <fullName>Shared - Climate Corps and host</fullName>
            </value>
            <value>
                <fullName>Shared - other EDF program and host</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>