unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/Global_Convening_Registration__c.field-meta.xml
<CustomField>
    <fullName>Global_Convening_Registration__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in Portal deliverables tracker for India and China (toggle done/not done)</description>
    <inlineHelpText>Used in Portal deliverables tracker for India and China (toggle done/not done)</inlineHelpText>
    <label>Global Convening Registration</label>
    <type>Checkbox</type>
</CustomField>