unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/Headquarters_Address__c.field-meta.xml
<CustomField>
    <fullName>Headquarters_Address__c</fullName>
    <description>Host org's headquarters address, if different from fellowship location address.</description>
    <inlineHelpText>Host org's headquarters address, if different from fellowship location address.</inlineHelpText>
    <label>Headquarters Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>