unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/Hidden_Other_Holiday_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>Hidden_Other_Holiday_Checkbox__c</fullName>
    <formula>INCLUDES(Which_Holidays_Will_Be_Paid__c,"Other")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hidden Other Holiday Checkbox</label>
    <type>Checkbox</type>
</CustomField>