unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/High_Level_Sponsor__c.field-meta.xml
<CustomField>
    <fullName>High_Level_Sponsor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>High Level Sponsor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Climate Corps Engagements (High Level Sponsor)</relationshipLabel>
    <relationshipName>Climate_Corps_Engagements</relationshipName>
    <type>Lookup</type>
</CustomField>