unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/High_Level_Sponsor_Title__c.field-meta.xml
<CustomField>
    <fullName>High_Level_Sponsor_Title__c</fullName>
    <formula>Host_Application__r.High_Level_Sponsor_Title__c</formula>
    <label>High Level Sponsor Title</label>
    <type>Text</type>
</CustomField>