unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/Host_App_India4__c.field-meta.xml
<CustomField>
    <fullName>Host_App_India4__c</fullName>
    <formula>"&amp;solmgr=1" + 
"&amp;id=" + Id +
"&amp;queryid=[Contacts]0Q_002EAI741772" + 
"&amp;templateid=0T_020EAI426201" + 
"&amp;defaultpdf=1" + 
"&amp;fp0=1" + 
"&amp;sc0=1" + 
"&amp;sc1=salesforcefile" + 
"&amp;contactid=" + Supervisor__c +
"&amp;emailtoid=" + Supervisor__c +
"&amp;emailtemplateid=00X7d000001dlktEAA" + 
"&amp;emailrelatedtoid=" + Id +
"&amp;ofn=2024+Climate+Corps+India+Host+Application" + 
"&amp;emailadditionalto=" + Additional_Emails__c + 
"&amp;qmode=SendEmail" +
"&amp;EmailFromID=0D28W000000gD0D"</formula>
    <label>Host App India4</label>
    <type>Text</type>
</CustomField>