unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/Host_App_India__c.field-meta.xml
<CustomField>
    <fullName>Host_App_India__c</fullName>
    <description>##Conga created button:00b7d000001dnvu</description>
    <formula>"&amp;solmgr=1" + 
"&amp;id=" + Id +
"&amp;queryid=[HostAppIndia]0Q_000EAI882023" + 
"&amp;templateid=0T_020EAI426201" + 
"&amp;qmode=SendEmail" + 
"&amp;defaultpdf=1" + 
"&amp;fp0=1" + 
"&amp;emailtoid=" + Supervisor_HA__c +
"&amp;emailtemplateid=00X8W000000r2Sl" + 
"&amp;sc0=1" + 
"&amp;sc1=salesforcefile"</formula>
    <label>Host App India</label>
    <type>Text</type>
</CustomField>