unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/Host_App_India_c_c__c.field-meta.xml
<CustomField>
    <fullName>Host_App_India_c_c__c</fullName>
    <description>##Conga created button:00b7d000001dnvu</description>
    <formula>"&amp;solmgr=1" + 
"&amp;id=" + Id +
"&amp;queryid=[HostAppIndia]0Q_000EAI882023" + 
"&amp;templateid=0T_020EAI426201" + 
"&amp;qmode=SendEmail" + 
"&amp;defaultpdf=1" + 
"&amp;fp0=1" + 
"&amp;ofn=App " + Engagement_Account_Name__c + " " + Name +
"&amp;emailtoid=ahletts@attainpartners.com" + 
"&amp;emailtemplateid=00X8W000000r2Sl" + 
"&amp;sc0=1" + 
"&amp;sc1=salesforcefile"</formula>
    <label>Host_App_India_c__c</label>
    <type>Text</type>
</CustomField>