unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/Host_Application_Type__c.field-meta.xml
<CustomField>
    <fullName>Host_Application_Type__c</fullName>
    <inlineHelpText>Type of application host used to submit their application.</inlineHelpText>
    <label>Host Application Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Host-Funded</fullName>
            </value>
            <value>
                <fullName>EDF-Funded (Full or Partial)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>