unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/Host_Relationship_Workplan_Notes__c.field-meta.xml
<CustomField>
    <fullName>Host_Relationship_Workplan_Notes__c</fullName>
    <label>Host Relationship Strategy</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>