unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/Housing_search_assistance_add_t_info__c.field-meta.xml
<CustomField>
    <fullName>Housing_search_assistance_add_t_info__c</fullName>
    <description>Additional information if host provides housing search assistance. FormAssembly.</description>
    <inlineHelpText>Additional information if host provides housing search assistance.</inlineHelpText>
    <label>Housing search assistance add't info</label>
    <type>TextArea</type>
</CustomField>