unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/How_Are_You_Paying_For_Training__c.field-meta.xml
<CustomField>
    <fullName>How_Are_You_Paying_For_Training__c</fullName>
    <description>Climate Corps requires that host organizations pay fellows $1,400 (gross) for Training Week. How are you planning on paying for training? (multiple choice, one answer allowed)</description>
    <label>How Are You Paying For Training?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Start date will be first day of training</fullName>
            </value>
            <value>
                <fullName>Additional stipend of $1400</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>