unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/How_did_we_meet_origin_of_lead__c.field-meta.xml
<CustomField>
    <fullName>How_did_we_meet_origin_of_lead__c</fullName>
    <inlineHelpText>Please select the category that best describes how we were introduced to this organization/how the lead developed. Be sure to fill in any follow-up fields (i.e. conference, etc).</inlineHelpText>
    <label>How did we meet/origin of lead</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Existing pipeline organization</fullName>
            </value>
            <value>
                <fullName>EDF Relationship (add note)</fullName>
            </value>
            <value>
                <fullName>Conference (see conference field)</fullName>
            </value>
            <value>
                <fullName>Consultants (see consultant field)</fullName>
            </value>
            <value>
                <fullName>Pipeline research/cold lead</fullName>
            </value>
            <value>
                <fullName>Unsolicited</fullName>
            </value>
            <value>
                <fullName>Host Referral (see referral field)</fullName>
            </value>
            <value>
                <fullName>Wholesale/partnership (see partnership field)</fullName>
            </value>
            <value>
                <fullName>Webinar</fullName>
            </value>
            <value>
                <fullName>Other (add note)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>