unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/How_Will_You_Onboard_The_Fellow__c.field-meta.xml
<CustomField>
    <fullName>How_Will_You_Onboard_The_Fellow__c</fullName>
    <label>How Will You Onboard The Fellow?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>As an hourly employee</fullName>
            </value>
            <value>
                <fullName>As a salaried employee</fullName>
            </value>
            <value>
                <fullName>As a third-party contractor</fullName>
            </value>
            <value>
                <fullName>Other (Comment box)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>