unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/HR_Contact__c.field-meta.xml
<CustomField>
    <fullName>HR_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HR Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Climate Corps Engagements (HR Contact)</relationshipLabel>
    <relationshipName>Climate_Corps_Engagements1</relationshipName>
    <type>Lookup</type>
</CustomField>