unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/Industry_ClassificationHA__c.field-meta.xml
<CustomField>
    <fullName>Industry_ClassificationHA__c</fullName>
    <description>Shows on engagement list, from form assembly.</description>
    <inlineHelpText>Shows on engagement list. From host application.</inlineHelpText>
    <label>Industry Classification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Arts, Media, Entertainment</fullName>
            </value>
            <value>
                <fullName>Automotive</fullName>
            </value>
            <value>
                <fullName>College or University</fullName>
            </value>
            <value>
                <fullName>Consumer Package Goods</fullName>
            </value>
            <value>
                <fullName>Energy or Utility</fullName>
            </value>
            <value>
                <fullName>Financial Services and Insurance</fullName>
            </value>
            <value>
                <fullName>Food Services</fullName>
            </value>
            <value>
                <fullName>Government/Public Administration</fullName>
            </value>
            <value>
                <fullName>Health Care</fullName>
            </value>
            <value>
                <fullName>Hospitality</fullName>
            </value>
            <value>
                <fullName>Industrial Goods and Manufacturing</fullName>
            </value>
            <value>
                <fullName>Internet, Software, and Technology Services</fullName>
            </value>
            <value>
                <fullName>Military</fullName>
            </value>
            <value>
                <fullName>Nonprofit</fullName>
            </value>
            <value>
                <fullName>Professional and Technical Services</fullName>
            </value>
            <value>
                <fullName>Public Housing Authority</fullName>
            </value>
            <value>
                <fullName>Real Estate</fullName>
            </value>
            <value>
                <fullName>Religious Organization</fullName>
            </value>
            <value>
                <fullName>Retail and Apparel</fullName>
            </value>
            <value>
                <fullName>School or School District</fullName>
            </value>
            <value>
                <fullName>Telecommunications</fullName>
            </value>
            <value>
                <fullName>Transportation and Warehousing</fullName>
            </value>
            <value>
                <fullName>Wholesale</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>