unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/Kilowatt_Signup__c.field-meta.xml
<CustomField>
    <fullName>Kilowatt_Signup__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Triggered by a change to Done/Not Done slider on the "Sign up for the Kilowatt Newsletter" tile in the Deliverables Tracker section of the fellow portal</description>
    <inlineHelpText>Automatically updates when the fellow updates the Done/Not Done slider on the "Sign up for the Kilowatt Newsletter" tile on the Deliverables Tracker page in the fellow portal</inlineHelpText>
    <label>Kilowatt Signup</label>
    <type>Checkbox</type>
</CustomField>