unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/LinkedIn_URL__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_URL__c</fullName>
    <formula>Fellow_Name__r.LinkedIn_Profile__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LinkedIn URL</label>
    <type>Text</type>
</CustomField>