unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/Matching_Preferences_from_Host__c.field-meta.xml
<CustomField>
    <fullName>Matching_Preferences_from_Host__c</fullName>
    <label>Matching Preferences from Host</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>