unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/Matching_Team_Notes__c.field-meta.xml
<CustomField>
    <fullName>Matching_Team_Notes__c</fullName>
    <inlineHelpText>To be used by the Matching Team Members ( ONLY)</inlineHelpText>
    <label>Matching Team Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>