unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/Media_Profile__c.field-meta.xml
<CustomField>
    <fullName>Media_Profile__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Triggered by a change to Done/Not Done slider on the "Media Profile" tile in the Deliverables Tracker section of the fellow portal</description>
    <inlineHelpText>Automatically updates when the fellow updates the Done/Not Done slider on the "Media Profile" tile on the Deliverables Tracker page in the fellow portal</inlineHelpText>
    <label>Media Profile</label>
    <type>Checkbox</type>
</CustomField>