unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/Mid_Point_Check_In_Notes__c.field-meta.xml
<CustomField>
    <fullName>Mid_Point_Check_In_Notes__c</fullName>
    <label>Mid-Point Check In Notes</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>