unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/Number_Of_Consider_Me__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Consider_Me__c</fullName>
    <label>Number Of Consider Me</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>