unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/Number_of_Fellows_Requested__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Fellows_Requested__c</fullName>
    <description>India application only. Populated via form assembly.</description>
    <inlineHelpText>India-only</inlineHelpText>
    <label>Number of Fellows Requested</label>
    <length>2</length>
    <type>Text</type>
</CustomField>