unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/Number_of_Suppliers__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Suppliers__c</fullName>
    <description>If you worked on a supply chain project, how many of your host company’s suppliers will your recommendations influence?</description>
    <inlineHelpText>If you worked on a supply chain project, how many of your host company’s suppliers will your recommendations influence?</inlineHelpText>
    <label>Number of Suppliers</label>
    <length>50</length>
    <type>Text</type>
</CustomField>