unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/Onsite_Photo_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Onsite_Photo_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>checkbox is checked when the onsite photo is uploaded</description>
    <inlineHelpText>checkbox is checked when the onsite photo is uploaded</inlineHelpText>
    <label>Onsite Photo Submitted</label>
    <type>Checkbox</type>
</CustomField>