unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/Orientation_Webinar__c.field-meta.xml
<CustomField>
    <fullName>Orientation_Webinar__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Triggered by a change to Done/Not Done slider on the "Watch the orientation webinar" tile in the Deliverables Tracker section of the fellow portal</description>
    <inlineHelpText>Automatically updates when the fellow updates the Done/Not Done slider on the "Watch the orientation webinar" tile on the Deliverables Tracker page in the fellow portal</inlineHelpText>
    <label>Orientation Webinar</label>
    <type>Checkbox</type>
</CustomField>