unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/Other_Fellowship_City_State__c.field-meta.xml
<CustomField>
    <fullName>Other_Fellowship_City_State__c</fullName>
    <description>Populates if the fellowship city and state are different from the HQ address or the fellowship can be in more than one location.</description>
    <inlineHelpText>Populates if the fellowship city and state are different from the HQ address or the fellowship can be in more than one location.</inlineHelpText>
    <label>Other Fellowship City/State</label>
    <type>TextArea</type>
</CustomField>