unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/Other_Holiday__c.field-meta.xml
<CustomField>
    <fullName>Other_Holiday__c</fullName>
    <description>This text area is for when Other is chosen for which of the following holidays will be paid?</description>
    <inlineHelpText>This text area is for when Other is chosen for which of the following holidays will be paid?</inlineHelpText>
    <label>Other Holiday</label>
    <type>TextArea</type>
</CustomField>