unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/Other_Onboarding__c.field-meta.xml
<CustomField>
    <fullName>Other_Onboarding__c</fullName>
    <description>This text area is for when Other is chosen for How will you onboard the fellow?</description>
    <inlineHelpText>This text area is for when Other is chosen for How will you onboard the fellow?</inlineHelpText>
    <label>Other Onboarding</label>
    <type>TextArea</type>
</CustomField>