unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/Other_Project_Category__c.field-meta.xml
<CustomField>
    <fullName>Other_Project_Category__c</fullName>
    <description>Populated if "Other" was selected in Project Category field.</description>
    <label>Other Project Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>