unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/Other_Stipend__c.field-meta.xml
<CustomField>
    <fullName>Other_Stipend__c</fullName>
    <description>This text area is for when Other is chosen for When will this stipend be administered?</description>
    <inlineHelpText>This text area is for when Other is chosen for When will this stipend be administered?</inlineHelpText>
    <label>Other Stipend</label>
    <type>TextArea</type>
</CustomField>