unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/Overall_Experience__c.field-meta.xml
<CustomField>
    <fullName>Overall_Experience__c</fullName>
    <inlineHelpText>What was the host's overall experience like?</inlineHelpText>
    <label>Overall Experience</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>