unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/Photo__c.field-meta.xml
<CustomField>
    <fullName>Photo__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Automatically gets checked when the fellow uploads a headshot</inlineHelpText>
    <label>Photo submitted</label>
    <type>Checkbox</type>
</CustomField>